// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assets transformer for www configs should build the README.md file 1`] = `
Object {
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# module
> A great module!

[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/nfroidure/module/blob/master/LICENSE)
[![NPM version](https://badge.fury.io/js/module.svg)](https://npmjs.org/package/module)
[![Dependency Status](https://david-dm.org/nfroidure/module.svg)](https://david-dm.org/nfroidure/module)
[![devDependency Status](https://david-dm.org/nfroidure/module/dev-status.svg)](https://david-dm.org/nfroidure/module#info=devDependencies)
[![Package Quality](https://npm.packagequality.com/shield/module.svg)](https://packagequality.com/#?package=module)


[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/module/blob/master/LICENSE)
",
  "name": "README.md",
}
`;

exports[`Assets transformer for www configs should build the README.md file with additional badges 1`] = `
Object {
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# module
> A great module!

[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/nfroidure/module/blob/master/LICENSE)
[![Build status](https://travis-ci.com/nfroidure/module.svg?branch=master)](https://travis-ci.com/github/nfroidure/module)
[![Coverage Status](https://coveralls.io/repos/github/nfroidure/module/badge.svg?branch=master)](https://coveralls.io/github/nfroidure/module?branch=master)
[![NPM version](https://badge.fury.io/js/module.svg)](https://npmjs.org/package/module)
[![Dependency Status](https://david-dm.org/nfroidure/module.svg)](https://david-dm.org/nfroidure/module)
[![devDependency Status](https://david-dm.org/nfroidure/module/dev-status.svg)](https://david-dm.org/nfroidure/module#info=devDependencies)
[![Package Quality](https://npm.packagequality.com/shield/module.svg)](https://packagequality.com/#?package=module)
[![Code Climate](https://codeclimate.com/github/nfroidure/module.svg)](https://codeclimate.com/github/nfroidure/module)


[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/module/blob/master/LICENSE)
",
  "name": "README.md",
}
`;

exports[`Assets transformer for www configs should build the README.md file with no badge 1`] = `
Object {
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# module
> A great module!



[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/module/blob/master/LICENSE)
",
  "name": "README.md",
}
`;

exports[`Assets transformer for www configs should work with scoped packages 1`] = `
Object {
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# @scope/module
> A great module!

[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/nfroidure/scope-module/blob/master/LICENSE)
[![Build status](https://travis-ci.com/nfroidure/module.svg?branch=master)](https://travis-ci.com/github/nfroidure/module)
[![Coverage Status](https://coveralls.io/repos/github/nfroidure/module/badge.svg?branch=master)](https://coveralls.io/github/nfroidure/module?branch=master)
[![NPM version](https://badge.fury.io/js/%40scope%2Fmodule.svg)](https://npmjs.org/package/@scope/module)
[![Dependency Status](https://david-dm.org/nfroidure/@scope/module.svg)](https://david-dm.org/nfroidure/@scope/module)
[![devDependency Status](https://david-dm.org/nfroidure/@scope/module/dev-status.svg)](https://david-dm.org/nfroidure/@scope/module#info=devDependencies)
[![Package Quality](https://npm.packagequality.com/shield/@scope/module.svg)](https://packagequality.com/#?package=@scope/module)
[![Code Climate](https://codeclimate.com/github/nfroidure/module.svg)](https://codeclimate.com/github/nfroidure/module)


[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/scope-module/blob/master/LICENSE)
",
  "name": "README.md",
}
`;

exports[`Assets transformer for www configs should work with scoped packages inside a monorepo 1`] = `
Object {
  "data": "[//]: # ( )
[//]: # (This file is automatically generated by a \`metapak\`)
[//]: # (module. Do not change it except between the)
[//]: # (\`content:start/end\` flags, your changes would)
[//]: # (be overridden.)
[//]: # ( )
# @scope/module
> A great module!

[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/nfroidure/scope/blob/master/packages/scope-module/LICENSE)
[![Build status](https://travis-ci.com/nfroidure/module.svg?branch=master)](https://travis-ci.com/github/nfroidure/module)
[![Coverage Status](https://coveralls.io/repos/github/nfroidure/module/badge.svg?branch=master)](https://coveralls.io/github/nfroidure/module?branch=master)
[![NPM version](https://badge.fury.io/js/%40scope%2Fmodule.svg)](https://npmjs.org/package/@scope/module)
[![Code Climate](https://codeclimate.com/github/nfroidure/module.svg)](https://codeclimate.com/github/nfroidure/module)


[//]: # (::contents:start)

## Usage

Just require me


[//]: # (::contents:end)


# API
\`\`\`
toto.lol()
\`\`\`

# Authors
- [Nicolas Froidure](http://insertafter.com/en/index.html)
- John Doe

# License
[MIT](https://github.com/nfroidure/scope/blob/master/packages/scope-module/LICENSE)
",
  "name": "README.md",
}
`;
